feat: implement SMS notifications, GIS heatmap, photo proof, rating system, and emergency routing
- Track A: Integrate SMS notification after ticket creation, address validation with geocoding
- Track B: Photo before/after upload for ticket resolution, citizen rating system (1-5 stars)
- Track C: GIS heatmap view in dashboard with Leaflet, color-coded markers by urgency
- Track D: Emergency routing scaffolding with CRITICAL classification and transfer tool

New files:
- HeatmapView.tsx component for map visualization
- /api/tickets/map endpoint for map data
- /api/tickets/[id]/rate endpoint for ratings
- Migration 003 for photo/rating columns
- SUPABASE_STORAGE_SETUP.md for manual bucket setup

Dependencies added: leaflet, react-leaflet, @types/leaflet

--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet.heat": "^0.2.5",
     "@vapi-ai/web": "^2.5.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0",
     "twilio": "^5.10.7",
     "zod": "^4.1.13"
